[gd_scene load_steps=6 format=3 uid="uid://cug84g4qoaxli"]

[ext_resource type="PackedScene" uid="uid://c4kqgomifh0ir" path="res://character/enemy.tscn" id="1_xs1ut"]
[ext_resource type="PackedScene" uid="uid://bbpru3vrea1fv" path="res://character/player.tscn" id="2_nn40t"]
[ext_resource type="PackedScene" uid="uid://c5n241jb8bdeo" path="res://bullet/bullet_medium_blue.tscn" id="3_25e3r"]
[ext_resource type="Script" path="res://game_manager.gd" id="4_b3scd"]
[ext_resource type="FontFile" uid="uid://cip2th0qpjt52" path="res://ReggaeOne-Regular.ttf" id="5_dlt0g"]

[node name="MainGameScene" type="Node2D"]

[node name="koishi" parent="." instance=ExtResource("1_xs1ut")]
position = Vector2(1024, 384)
slide_on_ceiling = false
player = NodePath("../player")
bullet = ExtResource("3_25e3r")

[node name="player" parent="." instance=ExtResource("2_nn40t")]
position = Vector2(192, 384)

[node name="GameManager" type="Node" parent="."]
script = ExtResource("4_b3scd")

[node name="ColorRect" type="ColorRect" parent="GameManager"]
z_index = 10
offset_left = 336.0
offset_top = 12.0
offset_right = 504.0
offset_bottom = 53.0
scale = Vector2(1, 0.983716)
color = Color(0, 0, 0.0392157, 1)

[node name="TimerLabel" type="Label" parent="GameManager"]
z_index = 15
offset_left = 396.0
offset_right = 488.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("5_dlt0g")
theme_override_font_sizes/font_size = 24
text = "99.99"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Time" type="Label" parent="GameManager"]
z_index = 15
offset_left = 332.0
offset_right = 384.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("5_dlt0g")
theme_override_font_sizes/font_size = 16
text = "時間"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="GameManager"]
z_index = 10
offset_left = 516.0
offset_top = 12.0
offset_right = 712.0
offset_bottom = 53.0
scale = Vector2(1, 0.983716)
color = Color(0, 0, 0.0392157, 1)

[node name="ScoreLabel" type="Label" parent="GameManager"]
z_index = 15
offset_left = 580.0
offset_right = 696.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("5_dlt0g")
theme_override_font_sizes/font_size = 24
text = "999999"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Votes" type="Label" parent="GameManager"]
z_index = 15
offset_left = 512.0
offset_right = 580.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("5_dlt0g")
theme_override_font_sizes/font_size = 16
text = "投票数"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="GameManager"]
z_index = 10
offset_left = 724.0
offset_top = 12.0
offset_right = 848.0
offset_bottom = 53.0
scale = Vector2(1, 0.983716)
color = Color(0, 0, 0.0392157, 1)

[node name="RankLabel" type="Label" parent="GameManager"]
z_index = 15
offset_left = 776.0
offset_right = 832.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("5_dlt0g")
theme_override_font_sizes/font_size = 24
text = "99"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Rank" type="Label" parent="GameManager"]
z_index = 15
offset_left = 720.0
offset_right = 772.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("5_dlt0g")
theme_override_font_sizes/font_size = 16
text = "順位"
horizontal_alignment = 2
vertical_alignment = 1
